; ModuleID = '/home/carl/AnghaBench/systemd/src/libsystemd/sd-device/extr_test-sd-device-thread.c_thread.c'
source_filename = "/home/carl/AnghaBench/systemd/src/libsystemd/sd-device/extr_test-sd-device-thread.c_thread.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i8*)* @thread to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @thread(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i32**, align 8
  store i8* %0, i8** %2, align 8
  %4 = load i8*, i8** %2, align 8
  %5 = bitcast i8* %4 to i32**
  store i32** %5, i32*** %3, align 8
  %6 = load i32**, i32*** %3, align 8
  %7 = load i32*, i32** %6, align 8
  %8 = call i32* @sd_device_unref(i32* %7)
  %9 = load i32**, i32*** %3, align 8
  store i32* %8, i32** %9, align 8
  %10 = icmp ne i32* %8, null
  %11 = xor i1 %10, true
  %12 = zext i1 %11 to i32
  %13 = call i32 @assert_se(i32 %12)
  ret i8* null
}

declare dso_local i32 @assert_se(i32) #1

declare dso_local i32* @sd_device_unref(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
